--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -4,9 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geographical-based friendship network\n",
+    "# Geographical-based friendship network<!-- omit in toc-->\n",
     "\n",
     "Luca Di Bello, University of Italian Switzerland (USI), 2023\n",
+    "\n",
+    "## Table of contents<!-- omit in toc-->\n",
+    "\n",
+    "- [Project description](#project-description)\n",
+    "- [Inhabitant maps](#inhabitant-maps)\n",
+    "  - [Purely random map](#purely-random-map)\n",
+    "  - [Geographical-based random map](#geographical-based-random-map)\n",
+    "  - [Friendship network](#friendship-network)\n",
     "\n",
     "## Project description\n",
     "\n",
@@ -41,7 +49,12 @@
     "The probability of a random individual being located in coordinates $(x,y)$ is the following:\n",
     "\n",
     "$$\n",
-    "P(\\text{random person settles in } (x,y)) = \\frac{s_{f(x,y)}}{\\sum_{(x',y') \\in \\text{Map}} s_{f(x',y')}}"
+    "P(\\text{random person settles in } (x,y)) = \\frac{s_{f(x,y)}}{\\sum_{(x',y') \\in \\text{Map}} s_{f(x',y')}}\n",
+    "$$\n",
+    "\n",
+    "## Friendship network\n",
+    "\n",
+    "FINISH THIS WHEN I HAVE SOME TIME"
    ]
   },
   {
