--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -878,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the plots above, is possible to note that the maximum eigenvalue is always greater than the average degree, and less than the maximum degree."
+    "From the plots above, is possible to note that the maximum eigenvalue is always greater than the average degree, and less than the maximum degree. Due to the increasing graph density, the gap between the maximum degree and average degree tends to decrease when $p$ increases, leading to a smaller gap between the maximum eigenvalue and the average degree."
    ]
   },
   {
