--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -885,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Largest connected component and eigenvalues\n",
+    "##### Connected components and eigendecomposition\n",
     "\n",
     "In this section will be explored the relationship between the largest connected component and the eigenvalus of a randomly generated population of size $n=1000$, analyzing the data with different probabilities.\n",
     "\n",
@@ -994,25 +994,19 @@
     "  print(\"\\t- Second smallest eigenvalue = {}\".format(second_smallest_eigenvalue))\n",
     "  print(\"\\t- Size of largest connected component = {}\".format(largest_component.vcount()))\n",
     "\n",
-    "# Hide extra subplots\n",
-    "#for i in range(len(ps), nrows * ncols):\n",
-    "#  axes[i//2, i%2].axis('off')\n",
-    "\n",
     "# Plot number of connected components\n",
     "fig = sns.barplot(x=ps, y=n_connected_components)\n",
     "fig.set_title('Number of connected components vs second smallest eigenvalue', pad=20).set_fontsize('16')\n",
     "fig.set_xlabel('p')\n",
     "fig.set_ylabel('Number of connected components')\n",
-    "# Set spacing between title and plot\n",
-    "fig.title.set_position([.5, 1.05])\n",
-    "# Add spacing between bars and plot border on y axis\n",
-    "fig.set_ylim(0, 1.1 * max(n_connected_components))\n",
+    "fig.title.set_position([.5, 1.05]) # Set spacing between title and plot\n",
+    "fig.set_ylim(0, 1.1 * max(n_connected_components)) # Add spacing between bars and plot border on y axis\n",
     "\n",
     "# Add text showing the number of connected components + second smallest eigenvalue\n",
     "for i, p in enumerate(ps):\n",
     "  fig.text(i, n_connected_components[i], 'n = {}\\nλ2 = {}'.format(n_connected_components[i], np.round(n_second_smallest_eigenvalues[i], 2)), ha='center', va='bottom')\n",
     "\n",
-    "# Plot\n",
+    "# Show figure\n",
     "plt.show()"
    ]
   },
