Fixed readme + titles indentation

--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -56,7 +56,7 @@
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "## Friendship network\n",
+    "## Friendship networks\n",
     "\n",
     "From the inhabitant maps, a friendship network is created following two different models:\n",
     "\n",
