--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -66,11 +66,11 @@
     "\n",
     "$$\n",
     "\\begin{equation*} \\tag{3}\n",
-    "P(A - B) = e^{-\\beta d(A,B)}\n",
+    "P(A - B) = e^{-\\beta \\, d(A,B)}\n",
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "Where $d(A,B)$ is the Euclidean distance between $A$ and $B$.\n"
+    "Where $d(A,B)$ is the Euclidean distance between $A$ and $B$ and $\\beta$ is a parameter that determines the strength of the geographical effect. The higher the value of $\\beta$, the more likely it is that two individuals will be friends if they are close to each other.\n"
    ]
   },
   {
