Now we have a coherent readme

--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -8,13 +8,35 @@
     "\n",
     "Luca Di Bello, University of Italian Switzerland (USI), 2023\n",
     "\n",
+    "## Showcase<!-- GIFS -->\n",
+    "\n",
+    "<table style=\"width:100%\">\n",
+    "  <tr>\n",
+    "    <th>Purely random friendship network</th>\n",
+    "    <th>Geographical-based friendship network</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>\n",
+    "      <img src=\"./assets/erdos-renyi-network/gifs/erdos-renyi-network-simulation-1.gif\" width=\"auto\" />\n",
+    "    </td>\n",
+    "    <td>\n",
+    "      <img src=\"./assets/geographical-friendship-network/gifs/geographical-friendship-network-simulation-1.gif\" width=\"auto\" />\n",
+    "    </td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "> Note: The GIFs above are just a small sample of the pre-computed simulations. The full set of simulations can be found in the `assets` folder.\n",
+    "\n",
     "## Table of contents<!-- omit in toc-->\n",
     "\n",
-    "- [Project description](#project-description)\n",
-    "- [Inhabitant maps](#inhabitant-maps)\n",
-    "  - [Purely random map](#purely-random-map)\n",
-    "  - [Geographical-based random map](#geographical-based-random-map)\n",
-    "  - [Friendship network](#friendship-network)\n",
+    "- [Geographical-based friendship network](#geographical-based-friendship-network)\n",
+    "  - [Showcase](#showcase)\n",
+    "  - [Table of contents](#table-of-contents)\n",
+    "  - [Project description](#project-description)\n",
+    "  - [Inhabitant maps](#inhabitant-maps)\n",
+    "    - [Purely random map](#purely-random-map)\n",
+    "    - [Geographical-based random map](#geographical-based-random-map)\n",
+    "  - [Friendship networks](#friendship-networks)\n",
     "\n",
     "## Project description\n",
     "\n",
@@ -70,7 +92,7 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "Where $d(A,B)$ is the Euclidean distance between $A$ and $B$ and $\\beta$ is a parameter that determines the strength of the geographical effect. The higher the value of $\\beta$, the more likely it is that two individuals will be friends if they are close to each other.\n"
+    "Where $d(A,B)$ is the Euclidean distance between $A$ and $B$ and $\\beta$ is a parameter that determines the strength of the geographical effect. The higher the value of $\\beta$, the more likely it is that two individuals will be friends if they are close to each other."
    ]
   },
   {
@@ -2989,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
