--- a/geographical-friendship-network.ipynb
+++ b/geographical-friendship-network.ipynb
@@ -584,7 +584,7 @@
     "\n",
     "The simulations will be run using function `distMatrixFromN` defined earlier in point *A.3* to gather statistics on the Euclidean distance between all pairs of individuals in a given map.\n",
     "\n",
-    "> Note: the number of simulation run for each value of $n$ has been set to 5 rather than 100 to speed up the execution of this task. With the default value the simulation would take several minutes to complete (estimated time for n=10000: ~50 minutes).\n"
+    "> Note: the number of simulation run for each value of $n$ has been set to 5 rather than 100 to speed up the execution of this task. With the default value the simulation would take several minutes to complete (with 5 simulations, it takes about 50 minutes).\n"
    ]
   },
   {
